Adjust to QDomDocument::setContent change

With the refactoring of setContent introduce in
8cc389068be398ad20188170c245ca5de305c92e, we would now need two implicit
conversions for setContent to work with QDBusReply<QString>, but C++
only allows one.

While ideally, we would adjust QAnyString to accept types convertible to
QString (QTBUG-105389), add conversions to QString as a hotfix
to unblock the submodule update.

Change-Id: I00fe105aa328156a0c72556c86b1c224b02959bb
Reviewed-by: Sona Kurazyan <sona.kurazyan@qt.io>